# stepik-django

./: .gitlab-ci.yml  db.sqlite3  pyproject.toml
