[tool.poetry]
name = "myproject"
version = "0.1.0"
description = "A simple Django project"
authors = ["Abdulazis"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
